--- a/AboutUs/index.html
+++ b/AboutUs/index.html
@@ -3,11 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../Styles/aboutus.css">
-    <title>BMW</title>
+    <title>Document</title>
 </head>
 <body>
-    <nav class="container"></nav>
-    
+        <ol>
+            Daryan Mamsaleh
+            <il>15 years old</il>
+            <il>Pasching, HTL Leonding student, likes basketball</il>
+            <il>kack ausländer</il>
+        </ol>
 </body>
 </html>
