was du verändeert hast

--- a/AboutUs/index.html
+++ b/AboutUs/index.html
@@ -4,13 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="../Styles/aboutUs.css">
 </head>
 <body>
-        <ol>
-            Daryan Mamsaleh
-            <il>15 years old</il>
-            <il>Pasching, HTL Leonding student, likes basketball</il>
-            <il>kack ausländer</il>
-        </ol>
+    <p> About us</p>
+
+     <div class="box">
+        <h2>Meine Box</h2>
+        <p> ist eine einfache Box mit Daryan MAmsaleg.</p>
+    </div>
+        <li>Arda Dönmez</li>
+        <li>Kermincan Yagci</li>
+        <li>Rron Gashi</li>
+    </ul>
 </body>
 </html>
