Finished BMWCar/index.html

--- a/BMWCar/index.html
+++ b/BMWCar/index.html
@@ -3,10 +3,54 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>BMW Hintergrund</title>
+    <title>BMW Serien Überblick</title>
     <link rel="stylesheet" href="../Styles/cars.css">
 </head>
 <body>
+    <header>
+        <a href="../index.html">
+        <img class="logo" src="../Photos/bmw_logo2.png" alt="BMW Logo">
+        </a>
+        <h1>BMW Serien Überblick</h1>
+    </header>
 
+    <main>
+        <section class="grid-container">
+            <div class="grid-item">
+                <img src="../Photos/1er-bmw.jpg" alt="BMW 1 Series">
+                <h2>BMW 1er Serie</h2>
+                <p>Die BMW 1er Serie ist ein kompakter Hatchback mit sportlichem Handling und moderner Technologie.</p>
+            </div>
+            <div class="grid-item">
+                <img src="../Photos/2er-bmw.jpg" alt="BMW 2 Series">
+                <h2>BMW 2er Serie</h2>
+                <p>Die BMW 2er Serie kombiniert kompakte Abmessungen mit dynamischem Fahrerlebnis.</p>
+            </div>
+            <div class="grid-item">
+                <img src="../Photos/3er-bmw.jpg" alt="BMW 3 Series">
+                <h2>BMW 3er Serie</h2>
+                <p>Die ikonische BMW 3er Serie bietet eine perfekte Balance aus Leistung, Luxus und Alltagstauglichkeit.</p>
+            </div>
+            <div class="grid-item">
+                <img src="../Photos/4er-bmw.jpg" alt="BMW 4 Series">
+                <h2>BMW 4er Serie</h2>
+                <p>Sportlicher als die 3er Serie, bietet die BMW 4er Serie starke Motoren und ein schlankes Design.</p>
+            </div>
+            <div class="grid-item">
+                <img src="../Photos/5er-bmw.jpg" alt="BMW 5 Series">
+                <h2>BMW 5er Serie</h2>
+                <p>Die BMW 5er Serie ist eine luxuriöse Mittelklasselimousine mit fortschrittlicher Technologie und Komfort.</p>
+            </div>
+            <div class="grid-item">
+                <img src="../Photos/6er-bmw.jpg" alt="BMW 6er Serie">
+                <h2>BMW 6er Serie</h2>
+                <p>Die BMW 6er Serie bietet luxuriösen Komfort und kraftvolle Motoren, erhältlich als Coupé und Gran Coupé.</p>
+            </div>
+        </section>
+
+        <div class="button-container">
+            <a href="../InfosBMW/index.html" class="btn">Mehr erfahren</a>
+        </div>
+    </main>
 </body>
 </html>
