--- a/BMWCar/index.html
+++ b/BMWCar/index.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         <a href="../index.html">
-        <img class="logo" src="../Photos/bmw_logo2.png" alt="BMW Logo">
+            <img class="logo" src="../Photos/bmw_logo2.png" alt="BMW Logo">
         </a>
         <h1>BMW Serien Überblick</h1>
     </header>
@@ -17,33 +17,45 @@
     <main>
         <section class="grid-container">
             <div class="grid-item">
-                <img src="../Photos/1er-bmw.jpg" alt="BMW 1 Series">
-                <h2>BMW 1er Serie</h2>
+                <a href="https://www.bmw.at/de/all-models/1-series.html">
+                    <img src="../Photos/1er-bmw.jpg" alt="BMW 1 Series">
+                    <h2>BMW 1er Serie</h2>
+                </a>
                 <p>Die BMW 1er Serie ist ein kompakter Hatchback mit sportlichem Handling und moderner Technologie.</p>
             </div>
             <div class="grid-item">
-                <img src="../Photos/2er-bmw.jpg" alt="BMW 2 Series">
-                <h2>BMW 2er Serie</h2>
+                <a href="https://www.bmw.at/de/all-models/2-series.html">
+                    <img src="../Photos/2er-bmw.jpg" alt="BMW 2 Series">
+                    <h2>BMW 2er Serie</h2>
+                </a>
                 <p>Die BMW 2er Serie kombiniert kompakte Abmessungen mit dynamischem Fahrerlebnis.</p>
             </div>
             <div class="grid-item">
-                <img src="../Photos/3er-bmw.jpg" alt="BMW 3 Series">
-                <h2>BMW 3er Serie</h2>
+                <a href="https://www.bmw.at/de/all-models/3-series.html">
+                    <img src="../Photos/3er-bmw.jpg" alt="BMW 3 Series">
+                    <h2>BMW 3er Serie</h2>
+                </a>
                 <p>Die ikonische BMW 3er Serie bietet eine perfekte Balance aus Leistung, Luxus und Alltagstauglichkeit.</p>
             </div>
             <div class="grid-item">
-                <img src="../Photos/4er-bmw.jpg" alt="BMW 4 Series">
-                <h2>BMW 4er Serie</h2>
+                <a href="https://www.bmw.at/de/all-models/4-series.html">
+                    <img src="../Photos/4er-bmw.jpg" alt="BMW 4 Series">
+                    <h2>BMW 4er Serie</h2>
+                </a>
                 <p>Sportlicher als die 3er Serie, bietet die BMW 4er Serie starke Motoren und ein schlankes Design.</p>
             </div>
             <div class="grid-item">
-                <img src="../Photos/5er-bmw.jpg" alt="BMW 5 Series">
-                <h2>BMW 5er Serie</h2>
+                <a href="https://www.bmw.at/de/all-models/5-series.html">
+                    <img src="../Photos/5er-bmw.jpg" alt="BMW 5 Series">
+                    <h2>BMW 5er Serie</h2>
+                </a>
                 <p>Die BMW 5er Serie ist eine luxuriöse Mittelklasselimousine mit fortschrittlicher Technologie und Komfort.</p>
             </div>
             <div class="grid-item">
-                <img src="../Photos/6er-bmw.jpg" alt="BMW 6er Serie">
-                <h2>BMW 6er Serie</h2>
+                <a href="https://www.bmw.at/de/all-models/6-series.html">
+                    <img src="../Photos/6er-bmw.jpg" alt="BMW 6 Series">
+                    <h2>BMW 6er Serie</h2>
+                </a>
                 <p>Die BMW 6er Serie bietet luxuriösen Komfort und kraftvolle Motoren, erhältlich als Coupé und Gran Coupé.</p>
             </div>
         </section>
