Erste veränderungen der Main Page (Navbar, bilder, ...)

--- a/index.html
+++ b/index.html
@@ -3,10 +3,30 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./Styles/main.css">
     <title>BMW</title>
 </head>
 <body>
-    <nav class="container"></nav>
-    
+    <div class="main">
+        <nav>
+            <li>
+                <a href="./index.html">Home</a>
+            </li>
+            <li>
+                <a href="./BMWCar/index.html">BMW</a>
+            </li>
+            <li>
+                <a href="./InfosBMW/index.html">Infos</a>
+            </li>
+        </nav>
+        <img class="img" src="./Photos/bmwM52024_jpg.jpg" alt="picture">
+        <div class="text">
+            <h1>BMW M5 2024: Der neue Traumwagen von jedem Türken</h1>
+            <div class="text-content">
+                <p>Mehr Entdecken</p>
+                <button></button>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
