Fixed Merge Conflicts

--- a/BMWCar/index.html
+++ b/BMWCar/index.html
@@ -1,18 +1,4 @@
 <!DOCTYPE html>
-<<<<<<< HEAD
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../Styles/cars.css">
-    <title>BMW</title>
-</head>
-<body>
-    <nav class="container"></nav>
-    
-</body>
-</html>
-=======
 <html lang="de">
 <head>
     <meta charset="UTF-8">
@@ -72,12 +58,21 @@
                 </a>
                 <p>Die BMW 6er Serie bietet luxuriösen Komfort und kraftvolle Motoren, erhältlich als Coupé und Gran Coupé.</p>
             </div>
+            <div class="grid-item">
+                <a href="https://www.bmw.at/de/all-models/7-series.html">
+                    <img src="../Photos/7er-bmw.jpg" alt="BMW 7 Series">
+                    <h2>BMW 7er Serie</h2>
+                </a>
+                <p>Die BMW 7er Serie verkörpert Luxus in Perfektion. Mit modernster Technologie, edlen Materialien und kraftvollen Motoren setzt sie neue Maßstäbe im Bereich der Premium-Limousinen.</p>
+            </div>
+            <div class="grid-item">
+                <a href="https://www.bmw.at/de/all-models/8-series.html">
+                    <img src="../Photos/8er-bmw.jpg" alt="BMW 8 Series">
+                    <h2>BMW 8er Serie</h2>
+                </a>
+                <p>Die BMW 8er Serie kombiniert athletische Dynamik mit luxuriösem Design. Als Gran Coupé, Coupé oder Cabrio bietet sie pure Eleganz und maximale Fahrfreude auf höchstem Niveau.</p>
+            </div>            
         </section>
-
-        <div class="button-container">
-            <a href="../InfosBMW/index.html" class="btn">Mehr erfahren</a>
-        </div>
     </main>
 </body>
 </html>
->>>>>>> 2e0d84139471e665890fdeca4ca63123c6c96f5a
