Fixed Merge Conflicts by Kerim

--- a/InfosBMW/index.html
+++ b/InfosBMW/index.html
@@ -3,20 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<<<<<<< HEAD
     <link rel="stylesheet" href="../Styles/infos.css">
-    <title>BMW</title>
-</head>
-<body>
-    <nav class="container"></nav>
-    
-=======
-    <link rel="stylesheet" href="infos.css">
     <title>Document</title>
 </head>
 <body>
+    <header>
     <h1>BMW General Information</h1>    
+    </header>
 
->>>>>>> 2e0d84139471e665890fdeca4ca63123c6c96f5a
+    <div class="box">
+        <h1>Geschichte</h1>
+        
+        <p>BMW (Bayerische Motoren Werke) wurde 1916 in München gegründet, ursprünglich zur Herstellung von Flugzeugmotoren. Nach dem Ersten Weltkrieg, als Deutschland die Produktion von Flugzeugen verboten wurde, wechselte BMW 1923 zur Herstellung von Motorrädern, mit dem Modell R32. 1928 begann das Unternehmen mit dem Automobilbau, nachdem es die Fahrzeugfabrik Eisenach erworben hatte und mit der Produktion des BMW 3/15, basierend auf dem britischen Austin 7, startete.
+        Während des Zweiten Weltkriegs stellte BMW erneut Flugzeugmotoren her, was zu einem Produktionsverbot nach Kriegsende führte. In den 1950er Jahren erlebte BMW eine Krise und stand kurz vor der Übernahme durch Daimler-Benz, wurde aber durch Investoren gerettet. In den 1960er Jahren erlebte das Unternehmen mit der "Neuen Klasse" (wie dem 1500er-Modell) den Durchbruch im Automobilmarkt. Heute ist BMW weltweit bekannt für seine Premium-Fahrzeuge und seine berühmte "Freude am Fahren"-Philosophie, einschließlich der Marken Rolls-Royce und MINI.</p>
+      </div>
 </body>
 </html>
