Huge changes, new styles, new connections, updated Markdown file, new Pictures

--- a/BMWCar/index.html
+++ b/BMWCar/index.html
@@ -11,6 +11,11 @@
         <a href="../index.html">
             <img class="logo" src="../Photos/bmw_logo2.png" alt="BMW Logo">
         </a>
+        <nav class="header-nav">
+            <a href="index.html">Serien</a>
+            <a href="engines.html">Motoren</a>
+            <a href="XModels.html">X Modelle</a>
+        </nav>
         <h1>BMW Serien Überblick</h1>
     </header>
 
@@ -22,7 +27,7 @@
                     <h2>BMW 1er Serie</h2>
                 </a>
                 <p>Die BMW 1er Serie ist ein kompakter Hatchback mit sportlichem Handling und moderner Technologie.</p>
-            </div>
+            </div>  
             <div class="grid-item">
                 <a href="https://www.bmw.at/de/all-models/2-series.html">
                     <img src="../Photos/2er-bmw.jpg" alt="BMW 2 Series">
