--- a/index.html
+++ b/index.html
@@ -13,15 +13,21 @@
                 <a href="./index.html">Home</a>
             </li>
             <li>
-                <a href="./BMWCar/index.html">BMW</a>
+                <a href="./BMWCar/index.html">Autos</a>
             </li>
             <li>
                 <a href="./InfosBMW/index.html">Infos</a>
             </li>
+            <li>
+                <a href="./AboutUs/index.html">Über uns</a>
+            </li>
         </nav>
+
+        <img class="logo" src="./Photos/bmw_Logo.png" alt="bmwLogo">
+
         <img class="img" src="./Photos/bmwM52024_jpg.jpg" alt="picture">
         <div class="text">
-            <h1>BMW M5 2024: Der neue Traumwagen von jedem Türken</h1>
+            <h1>BMW M5 2024: Der neue Traumwagen von allen Türken/innen</h1>
             <div class="text-content">
                 <p>Mehr Entdecken</p>
                 <button></button>
