Fixed mainpage, file not found

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             </li>
         </nav>
 
-        <img class="logo" src="./Photos/bmw_Logo.png" alt="bmwLogo">
+        <img class="logo" src="./Photos/bmw_logo.png" alt="bmwLogo">
 
         <img class="img" src="./Photos/bmwM52024_jpg.jpg" alt="picture">
         <div class="text">
