--- a/InfosBMW/index.html
+++ b/InfosBMW/index.html
@@ -18,12 +18,32 @@
         Während des Zweiten Weltkriegs stellte BMW erneut Flugzeugmotoren her, was zu einem Produktionsverbot nach Kriegsende führte. In den 1950er Jahren erlebte BMW eine Krise und stand kurz vor der Übernahme durch Daimler-Benz, wurde aber durch Investoren gerettet. In den 1960er Jahren erlebte das Unternehmen mit der "Neuen Klasse" (wie dem 1500er-Modell) den Durchbruch im Automobilmarkt. Heute ist BMW weltweit bekannt für seine Premium-Fahrzeuge und seine berühmte "Freude am Fahren"-Philosophie, einschließlich der Marken Rolls-Royce und MINI.</p>
       </div>
 
-    <div class="boxBrands">
+    <div class="boxMotorrad">
        <img src="../Photos/BmwMotorrad.jpg" alt="Foto von BmwMotorrad">
        <h2>BmwMotorrad</h2>
 
-        BMW Motorrad ist die Motorradsparte von BMW, die hochwertige Motorräder für verschiedene Einsatzbereiche wie Sport, Touring und Adventure mit fortschrittlicher Technik und charakteristischem Design herstellt.
-    </div>
+        <p>BMW Motorrad ist die Motorradsparte von BMW, die hochwertige Motorräder für verschiedene Einsatzbereiche wie Sport, Touring und Adventure mit fortschrittlicher Technik und charakteristischem Design.</p>
+        </div>
+    <div class="boxBMW">
+        <img src="../Photos/3er-bmw.jpg" alt="Foto von einem BMW">
+        <h2>BMW</h2>
+
+        <p>BMW ist die Hauptmarke der BMW Group, die hochwertige Premiumfahrzeuge mit Fokus auf Fahrdynamik, innovative Technik und elegantes Design für vielfältige Bedürfnisse anbietet.</p>
+     </div>
+
+     <div class="boxRollsRoyce">
+        <img src="../Photos/RollsRoyce.jpg" alt="Foto von einem Rolls-Royce">
+        <h2>Rolls-Royce</h2>
+
+        <p>Rolls-Royce ist die Luxusmarke der BMW Group und produziert handgefertigte, exklusive Fahrzeuge, die höchste Ansprüche an Qualität, Komfort und Luxus erfüllen.</p>
+     </div>
+
+     <div class="boxMINI">
+        <img src="../Photos/MINI.jpg" alt="Foto von einem MINI">
+        <h2>MINI</h2>
+
+        <p>MINI steht für kompakte, stilvolle Fahrzeuge, die mit ihrem individuellen Design und urbanen Charme ein einzigartiges Fahrerlebnis für Stadt- und Landfahrten bieten.</p>
+     </div>
     
 
     
