--- a/BMWCar/index.html
+++ b/BMWCar/index.html
@@ -5,9 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>BMW Serien Überblick</title>
     <link rel="stylesheet" href="../Styles/cars.css">
+    <link rel="stylesheet" href="../Styles/loadingAnimation.css">
 </head>
 <body>
     <header>
+        <div class="startAnimation">
+            <img src="../Photos/bmw_logo.png" alt="BMW Logo">
+        </div> 
+
         <a href="../index.html">
             <img class="logo" src="../Photos/bmw_logo2.png" alt="BMW Logo">
         </a>
