--- a/AboutUs/index.html
+++ b/AboutUs/index.html
@@ -7,15 +7,26 @@
     <link rel="stylesheet" href="../Styles/aboutUs.css">
 </head>
 <body>
-    <p> About us</p>
-
-     <div class="box">
-        <h2>Meine Box</h2>
-        <p> ist eine einfache Box mit Daryan MAmsaleg.</p>
+    <h1>About us</h1>
+    <div class="rectangle">
+        <h2>Arda Dönmez</h2>    
+        <p>Der Teamleiter des Projektes. Umfangreiche Erfahrung in Webentwicklung und Design, hat eine Vorliebe für BMW seit seiner Kindheit</p>
+        <img src="../Photos\5er-bmw.jpg" alt="foto von arda">
     </div>
-        <li>Arda Dönmez</li>
-        <li>Kermincan Yagci</li>
-        <li>Rron Gashi</li>
-    </ul>
+    <div class ="rectangle">
+        <h2>Kerimcan Yağci</h2>
+        <p>15 Jahre alt</p>
+        <img src="../Photos/1er-bmw.jpg" alt="1er-bmw">
+    </div>
+    <div class="rectangle">
+        <h2>Rron Gashi</h2>
+        <p>17 Jahre alt</p>
+        <img src="../Photos/bmw_m_twinpower_v8.jpg" alt="Rron">
+    </div>
+    <div class="rectangle">
+        <h2>Daryan Mamsaleh</h2>
+        <p>16 Jahre alt</p>
+        <img src="../Photos/8er-bmw.jpg" alt="Daryan">
+    </div>
 </body>
 </html>
