--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <div class="main">
+        <header>
         <nav>
             <li>
                 <a href="./index.html">Home</a>
@@ -22,6 +23,7 @@
                 <a href="./AboutUs/index.html">Über uns</a>
             </li>
         </nav>
+        </header>
 
         <img class="logo" src="./Photos/bmw_Logo.png" alt="bmwLogo">
 
@@ -30,9 +32,14 @@
             <h1>BMW M5 2024: Der neue Traumwagen von allen Türken/innen</h1>
             <div class="text-content">
                 <p>Mehr Entdecken</p>
-                <button></button>
+                <button href="https://www.bmw.at/de/all-models/5-series.html"></button>
             </div>
         </div>
     </div>
+    <div class="video-page">
+        <video src="./Photos/BMW_Mainpage_video.mp4" autoplay muted></video>
+    </div>
+
+    <script src="script.js"></script>
 </body>
 </html>
