--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <header>
         <nav>
             <li>
-                <a href="./index.html">Home</a>
+                <a>Home</a>
             </li>
             <li>
                 <a href="./BMWCar/index.html">Autos</a>
@@ -38,6 +38,23 @@
     </div>
     <div class="video-page">
         <video src="./Photos/BMW_Mainpage_video.mp4" autoplay muted></video>
+    </div>
+
+    <div class="bottomNav">
+        <nav>
+            <li>
+                <a href="./index.html">Home</a>
+            </li>
+            <li>
+                <a href="./BMWCar/index.html">Autos</a>
+            </li>
+            <li>
+                <a href="./InfosBMW/index.html">Infos</a>
+            </li>
+            <li>
+                <a href="./AboutUs/index.html">About Us</a>
+            </li>
+        </nav>
     </div>
 
     <script src="script.js"></script>
