--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./Styles/main.css">
+    <link rel="stylesheet" href="./styles/main.css">
     <title>BMW</title>
 </head>
 <body>
@@ -14,20 +14,20 @@
                 <a>Home</a>
             </li>
             <li>
-                <a href="./BMWCar/index.html">Autos</a>
+                <a href="./bmw-car/index.html">Autos</a>
             </li>
             <li>
-                <a href="./InfosBMW/index.html">Infos</a>
+                <a href="./infos-bmw/index.html">Infos</a>
             </li>
             <li>
-                <a href="./AboutUs/index.html">Über uns</a>
+                <a href="./about-us/index.html">Über uns</a>
             </li>
         </nav>
         </header>
 
-        <img class="logo" src="./Photos/bmw_logo.png" alt="bmwLogo">
+        <img class="logo" src="./photos/bmw_logo.png" alt="bmwLogo">
 
-        <img class="img" src="./Photos/bmwM52024_jpg.jpg" alt="picture">
+        <img class="img" src="./photos/bmwM52024_jpg.jpg" alt="picture">
         <div class="text">
             <h1>BMW M5 2024: Der neue Traumwagen von allen Türken/innen</h1>
             <div class="text-content">
@@ -37,7 +37,7 @@
         </div>
     </div>
     <div class="video-page">
-        <video src="./Photos/BMW_Mainpage_video.mp4" autoplay muted></video>
+        <video src="./photos/BMW_Mainpage_video.mp4" autoplay muted></video>
     </div>
 
     <div class="bottomNav">
@@ -46,13 +46,13 @@
                 <a href="./index.html">Home</a>
             </li>
             <li>
-                <a href="./BMWCar/index.html">Autos</a>
+                <a href="./bmw-car/index.html">Autos</a>
             </li>
             <li>
-                <a href="./InfosBMW/index.html">Infos</a>
+                <a href="./infos-bmw/index.html">Infos</a>
             </li>
             <li>
-                <a href="./AboutUs/index.html">About Us</a>
+                <a href="./about-us/index.html">About Us</a>
             </li>
         </nav>
     </div>
