--- a/infos-bmw/BMWHistory.html
+++ b/infos-bmw/BMWHistory.html
@@ -3,17 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../Styles/history.css">
+    <link rel="stylesheet" href="../styles/history.css">
+    <link rel="stylesheet" href="../styles/loadingAnimation.css">
     <title>Document</title>
 </head>
 <body>
     <header class="header">
+        <div class="startAnimation">
+            <img src="../Photos/bmw_logo.png" alt="BMW Logo">
+        </div> 
         <div class="header-content">
             <h1>BMW Group</h1>
             <nav class="nav-links">
                 <a href="../index.html">Main</a>
-                <a href="BMWMarken.html">Marken</a>
-                <a href="../BMWCar/index.html">Autos</a>
+                <a href="index.html">Marken</a>
+                <a href="../bmw-car/index.html">Autos</a>
             </nav>
         </div>   
 </body>
