--- a/infos-bmw/index.html
+++ b/infos-bmw/index.html
@@ -4,16 +4,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>BMW Group - Markenübersicht</title>
-    <link rel="stylesheet" href="../Styles/infos.css">
+    <link rel="stylesheet" href="../styles/infos.css">
+    <link rel="stylesheet" href="../styles/loadingAnimation.css"
 </head>
 <body>
     <header class="header">
+        <div class="startAnimation">
+            <img src="../Photos/bmw_logo.png" alt="BMW Logo">
+        </div> 
         <div class="header-content">
             <h1>BMW Group</h1>
             <nav class="nav-links">
                 <a href="../index.html">Main</a>
                 <a href="BMWHistory.html">Geschichte</a>
-                <a href="../BMWCar/index.html">Autos</a>
+                <a href="../bmw-car/index.html">Autos</a>
             </nav>
         </div>
     </header>
@@ -22,7 +26,7 @@
         <h2 class="section-title">Unsere Marken</h2>
         <div class="brands-grid">
             <article class="brand-card">
-                <img src="../Photos/1er-bmw.jpg" alt="BMW" class="brand-image">
+                <img src="../photos/1er-bmw.jpg" alt="BMW" class="brand-image">
                 <div class="brand-content">
                     <h3 class="brand-name">BMW</h3>
                     <p class="brand-description">
@@ -45,7 +49,7 @@
             </article>
 
             <article class="brand-card">
-                <img src="../Photos/MINI.jpg" alt="MINI" class="brand-image">
+                <img src="../photos/MINI.jpg" alt="MINI" class="brand-image">
                 <div class="brand-content">
                     <h3 class="brand-name">MINI</h3>
                     <p class="brand-description">
@@ -68,7 +72,7 @@
             </article>
 
             <article class="brand-card">
-                <img src="../Photos/RollsRoyce.jpg" alt="Rolls-Royce" class="brand-image">
+                <img src="../photos/RollsRoyce.jpg" alt="Rolls-Royce" class="brand-image">
                 <div class="brand-content">
                     <h3 class="brand-name">Rolls-Royce</h3>
                     <p class="brand-description">
@@ -91,7 +95,7 @@
             </article>
 
             <article class="brand-card">
-                <img src="../Photos/BmwMotorrad.jpg" alt="BMW Motorrad" class="brand-image">
+                <img src="../photos/BmwMotorrad.jpg" alt="BMW Motorrad" class="brand-image">
                 <div class="brand-content">
                     <h3 class="brand-name">BMW Motorrad</h3>
                     <p class="brand-description">
