--- a/infos-bmw/index.html
+++ b/infos-bmw/index.html
@@ -10,7 +10,7 @@
 <body>
     <header class="header">
         <div class="startAnimation">
-            <img src="../Photos/bmw_logo.png" alt="BMW Logo">
+            <img src="../photos/bmw_logo.png" alt="BMW Logo">
         </div> 
         <div class="header-content">
             <h1>BMW Group</h1>
