added bottom navbar

--- a/index.html
+++ b/index.html
@@ -4,9 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./styles/main.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="styles/loadingAnimation.css">
     <title>BMW</title>
 </head>
 <body>
+
+    <div class="startAnimation">
+        <img src="photos/bmw_logo.png" alt="BMW Logo">
+    </div> 
+
     <div class="main">
         <header>
         <nav>
@@ -32,7 +39,7 @@
             <h1>BMW M5 2024: Der neue Traumwagen von allen Türken/innen</h1>
             <div class="text-content">
                 <p>Mehr Entdecken</p>
-                <button href="https://www.bmw.at/de/all-models/5-series.html"></button>
+                <a href="https://www.bmw.at/de/all-models/5-series.html"><button href="https://www.bmw.at/de/all-models/5-series.html"></button></a>
             </div>
         </div>
     </div>
@@ -43,16 +50,16 @@
     <div class="bottomNav">
         <nav>
             <li>
-                <a href="./index.html">Home</a>
+                <a href="https://www.instagram.com/bmw/"><i class="fa fa-instagram" style="font-size:45px"></i></a>
             </li>
             <li>
-                <a href="./bmw-car/index.html">Autos</a>
+                <a href="https://www.youtube.com/user/BMW"><i class="fa fa-youtube-play" style="font-size:45px"></i></a>
             </li>
             <li>
-                <a href="./infos-bmw/index.html">Infos</a>
+                <a href="https://www.facebook.com/BMW"><i class="fa fa-facebook-f" style="font-size:45px"></i></a>
             </li>
             <li>
-                <a href="./about-us/index.html">About Us</a>
+                <a href="https://x.com/BMW?ref_src=twsrc%5Egoogle%7Ctwcamp%5Eserp%7Ctwgr%5Eauthor"><i class="fa fa-twitter" style="font-size:45px"></i></a>
             </li>
         </nav>
     </div>
