--- a/infos-bmw/index.html
+++ b/infos-bmw/index.html
@@ -117,6 +117,22 @@
                 </div>
             </article>
         </div>
+
+        <br>
+
+        <div class="history-container">
+             <article class="brand-card">
+                <img src="../photos/bmw-history-pic.jpg" class="brand-image">
+                <div class="brand-content">
+                    <h3 class="brand-name">History</h3>
+                    <p class="brand-description">Die Geschichte von BMW (Bayerische Motoren Werke) begann 1916, als das Unternehmen zunächst Flugzeugmotoren herstellte, insbesondere für den Ersten Weltkrieg. Nach dem Krieg wechselte BMW aufgrund von Einschränkungen der Flugzeugproduktion zu Motorrädern (1923) und später zu Automobilen (1928), mit dem BMW 3/15 als erstem Pkw. In den 1930er-Jahren machte sich BMW mit leistungsstarken Sportwagen und Luxusfahrzeugen einen Namen, bevor der Zweite Weltkrieg die Produktion wieder auf Flugzeugmotoren konzentrierte. Nach Kriegsende stand BMW kurz vor dem Bankrott, schaffte aber in den 1950er-Jahren mit der Isetta und später dem Ausbau der Mittelklasse- und Sportwagenserien den Durchbruch. Heute ist BMW ein weltweit führender Premiumhersteller, bekannt für Innovationen, Design und Leistung.</p>
+                    <a href="https://www.bmwgroup.com/en/company/history.html" class="brand-link">Mehr erfahren</a>
+                    </div>
+                </div>
+             </article>
+        </div>
+
+
     </main>
 </body>
 </html>
