Added Navigationbar and reworked Design

--- a/about-us/index.html
+++ b/about-us/index.html
@@ -4,29 +4,49 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="../Styles/aboutUs.css">
+    <link rel="stylesheet" href="../styles/aboutUs.css">
 </head>
 <body>
-    <h1>About us</h1>
-    <div class="rectangle">
+    
+    <nav>
+       
+        <div class ="logo">
+            <img src="../photos/MColors.png" alt = "Colors">
+        </div>
+        <li>
+            <a href="./index.html">Home</a>
+        </li>
+        <li>
+            <a href="./BMWCar/index.html">Autos</a>
+        </li>
+        <li>
+            <a href="./InfosBMW/index.html">Infos</a>
+        </li>
+        <li>
+            <a href="./AboutUs/index.html">Über uns</a>
+        </li>
+    </nav>
+    <h1>Wer sind wir?</h1>
+    <div class="rectangle" >
         <h2>Arda Dönmez</h2>    
-        <p>Der Teamleiter des Projektes. Umfangreiche Erfahrung in Webentwicklung und Design, hat eine Vorliebe für BMW seit seiner Kindheit</p>
-        <img src="../Photos\5er-bmw.jpg" alt="foto von arda">
+        <p>Der Teamleiter des Projektes. Umfangreiche Erfahrung in Webentwicklung und Design, hat eine Vorliebe für BMW seit seiner Kindheit aa aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
+        </p>
+        <img src="../photos\5er-bmw.jpg" alt="foto von arda">
     </div>
     <div class ="rectangle">
         <h2>Kerimcan Yağci</h2>
-        <p>15 Jahre alt</p>
-        <img src="../Photos/1er-bmw.jpg" alt="1er-bmw">
+        <p>BMW Liebhaber seit seinem fünften Lebensjahr, seit klein auf fahren seine Eltern BMW. Er erstellt die BMW-Modellen und Motoren Seite. Er ist 15 Jahre Alt lebt in Haid und kommt ursprünglich aus der Türkei.</p>
+        <img src="../photos/1er-bmw.jpg" alt="Kerimcan">
     </div>
     <div class="rectangle">
         <h2>Rron Gashi</h2>
-        <p>17 Jahre alt</p>
-        <img src="../Photos/bmw_m_twinpower_v8.jpg" alt="Rron">
+        <p>17 Jahre alt,</p>
+        <img src="../photos/bmw_m_twinpower_v8.jpg" alt="Rron">
     </div>
     <div class="rectangle">
         <h2>Daryan Mamsaleh</h2>
-        <p>16 Jahre alt</p>
-        <img src="../Photos/8er-bmw.jpg" alt="Daryan">
+        <p>15 Jahre alt, mit einer brennenden Begeisterung für BMW erstellt die Informations Seite auf unserer Seite.</p>
+        <img src="../photos/8er-bmw.jpg" alt="Daryan">
     </div>
 </body>
 </html>
