changed descriptions of cars

--- a/bmw-car/x-models.html
+++ b/bmw-car/x-models.html
@@ -79,7 +79,7 @@
                     <img src="../photos/iM-bmw.jpg" alt="BMW X8">
                     <h2>BMW iM</h2>
                 </a>
-                <p>Der BMW X8 kombiniert atemberaubendes Design mit enormer Leistung. Das Flaggschiff der X-Serie.</p>
+                <p>Der BMW iM kombiniert atemberaubendes Design mit enormer Leistung. Das Flaggschiff der X-Serie.</p>
             </div>
         </section>
         <section class="special-xm">
