changed at the video page the font size, button, font family...

--- a/index.html
+++ b/index.html
@@ -48,17 +48,18 @@
     </div>
     <div class="video-page">
         <video src="./photos/BMW_Mainpage_video.mp4" autoplay muted></video>
-        <div class="video-text">
-            <p>Racing</p>
-            <h1>M Power </h1>
-            <p>Entdecken Sie mehr</p>
-            <a href="https://www.bmw.at/de/all-models/5-series.html">
-                <div class="circle">
-                    <i class="icon">➔</i>
-                </div></a>
+        <div class="text">
+            <h1 id="racing">Racing</h1>
+            <div class="text-content">
+                <p>Mehr Entdecken</p>
+                <a href="https://www.bmw.at/de/all-models/5-series.html">
+                    <div class="circle">
+                        <i class="icon">➔</i>
+                    </div></a>
+            </div>
         </div>
-
     </div>
+    
 
     <div class="bottomNav">
         <nav>
