--- a/bmw-car/index.html
+++ b/bmw-car/index.html
@@ -27,56 +27,56 @@
     <main>
         <section class="grid-container">
             <div class="grid-item">
-                <a href="https://www.bmw.at/de/all-models/1-series.html">
+                <a href="https://www.bmw.at/de/all-models/1-series.html" target="_blank">
                     <img src="../photos/1er-bmw.jpg" alt="BMW 1 Series">
                     <h2>BMW 1er Serie</h2>
                 </a>
                 <p>Die BMW 1er Serie ist ein kompakter Hatchback mit sportlichem Handling und moderner Technologie.</p>
             </div>  
             <div class="grid-item">
-                <a href="https://www.bmw.at/de/all-models/2-series.html">
+                <a href="https://www.bmw.at/de/all-models/2-series.html" target="_blank">
                     <img src="../photos/2er-bmw.jpg" alt="BMW 2 Series">
                     <h2>BMW 2er Serie</h2>
                 </a>
                 <p>Die BMW 2er Serie kombiniert kompakte Abmessungen mit dynamischem Fahrerlebnis.</p>
             </div>
             <div class="grid-item">
-                <a href="https://www.bmw.at/de/all-models/3-series.html">
+                <a href="https://www.bmw.at/de/all-models/3-series.html" target="_blank">
                     <img src="../photos/3er-bmw.jpg" alt="BMW 3 Series">
                     <h2>BMW 3er Serie</h2>
                 </a>
                 <p>Die ikonische BMW 3er Serie bietet eine perfekte Balance aus Leistung, Luxus und Alltagstauglichkeit.</p>
             </div>
             <div class="grid-item">
-                <a href="https://www.bmw.at/de/all-models/4-series.html">
+                <a href="https://www.bmw.at/de/all-models/4-series.html" target="_blank">
                     <img src="../photos/4er-bmw.jpg" alt="BMW 4 Series">
                     <h2>BMW 4er Serie</h2>
                 </a>
                 <p>Sportlicher als die 3er Serie, bietet die BMW 4er Serie starke Motoren und ein schlankes Design.</p>
             </div>
             <div class="grid-item">
-                <a href="https://www.bmw.at/de/all-models/5-series.html">
+                <a href="https://www.bmw.at/de/all-models/5-series.html" target="_blank">
                     <img src="../photos/5er-bmw.jpg" alt="BMW 5 Series">
                     <h2>BMW 5er Serie</h2>
                 </a>
                 <p>Die BMW 5er Serie ist eine luxuriöse Mittelklasselimousine mit fortschrittlicher Technologie und Komfort.</p>
             </div>
             <div class="grid-item">
-                <a href="https://www.bmw.at/de/all-models/6-series.html">
+                <a href="https://www.bmw.at/de/all-models/6-series.html" target="_blank">
                     <img src="../photos/6er-bmw.jpg" alt="BMW 6 Series">
                     <h2>BMW 6er Serie</h2>
                 </a>
                 <p>Die BMW 6er Serie bietet luxuriösen Komfort und kraftvolle Motoren, erhältlich als Coupé und Gran Coupé.</p>
             </div>
             <div class="grid-item">
-                <a href="https://www.bmw.at/de/all-models/7-series.html">
+                <a href="https://www.bmw.at/de/all-models/7-series.html" target="_blank">
                     <img src="../photos/7er-bmw.jpg" alt="BMW 7 Series">
                     <h2>BMW 7er Serie</h2>
                 </a>
                 <p>Die BMW 7er Serie verkörpert Luxus in Perfektion. Mit modernster Technologie, edlen Materialien und kraftvollen Motoren setzt sie neue Maßstäbe im Bereich der Premium-Limousinen.</p>
             </div>
             <div class="grid-item">
-                <a href="https://www.bmw.at/de/all-models/8-series.html">
+                <a href="https://www.bmw.at/de/all-models/8-series.html" target="_blank">
                     <img src="../photos/8er-bmw.jpg" alt="BMW 8 Series">
                     <h2>BMW 8er Serie</h2>
                 </a>
