--- a/bmw-car/x-models.html
+++ b/bmw-car/x-models.html
@@ -26,56 +26,56 @@
     <main>
         <section class="grid-container">
             <div class="grid-item">
-                <a href="https://configure.bmw.at/de_AT/configure/U11/11EF/FKUKP,P0C5A,S01AG,S01CB,S01DF,S01EN,S0230,S0248,S02PA,S02TE,S02VB,S02VC,S02VF,S0302,S0322,S033B,S03M8,S03MC,S03MF,S0402,S0413,S0420,S0428,S0430,S0431,S0478,S0494,S04GQ,S04H2,S04NW,S0548,S0552,S05AC,S05AU,S05AV,S05DN,S0610,S0654,S0674,S06AE,S06AF,S06NX,S06PA,S06U3,S0711,S0754,S0760,S0775,S07EW,S07M9,S0851,S0879,S08KA,S08R3,S08R9,S08TF,S0925,S09T1,S09T2,S09TA,S09TB?_gl=1*1k1oxuj*_gcl_au*NzYzNjkwMjQ4LjE3Mjk2MDczODI.">
+                <a href="https://configure.bmw.at/de_AT/configure/U11/11EF/FKUKP,P0C5A,S01AG,S01CB,S01DF,S01EN,S0230,S0248,S02PA,S02TE,S02VB,S02VC,S02VF,S0302,S0322,S033B,S03M8,S03MC,S03MF,S0402,S0413,S0420,S0428,S0430,S0431,S0478,S0494,S04GQ,S04H2,S04NW,S0548,S0552,S05AC,S05AU,S05AV,S05DN,S0610,S0654,S0674,S06AE,S06AF,S06NX,S06PA,S06U3,S0711,S0754,S0760,S0775,S07EW,S07M9,S0851,S0879,S08KA,S08R3,S08R9,S08TF,S0925,S09T1,S09T2,S09TA,S09TB?_gl=1*1k1oxuj*_gcl_au*NzYzNjkwMjQ4LjE3Mjk2MDczODI." target="_blank">
                     <img src="../photos/x1-bmw.jpg" alt="BMW X1">
                     <h2>BMW X1</h2>
                 </a>
                 <p>Der BMW X1 ist ein kompakter SUV mit sportlichem Design und agilen Fahreigenschaften. Perfekt für die Stadt und das Gelände.</p>
             </div>
             <div class="grid-item">
-                <a href="https://configure.bmw.at/de_AT/configure/U10/81GM/FKTNL,P0C6R,S01AG,S01CB,S01DF,S01GN,S0230,S0248,S02PA,S02TE,S02VB,S02VC,S02VF,S0302,S0313,S0322,S033B,S03DN,S03KA,S03M8,S03MF,S0402,S0420,S0428,S0430,S0431,S0459,S0478,S0494,S04GQ,S04H2,S04NW,S0548,S0552,S05AC,S05AU,S05AV,S05DN,S0610,S0654,S0674,S06AE,S06AF,S06NX,S06PA,S06U3,S0711,S0754,S0760,S0775,S07EW,S07M9,S0851,S0879,S08KA,S08R3,S08R9,S08TF,S09T1,S09T2,S09TA,S09TB?_gl=1*10nf2nw*_gcl_au*NzYzNjkwMjQ4LjE3Mjk2MDczODI.">
+                <a href="https://configure.bmw.at/de_AT/configure/U10/81GM/FKTNL,P0C6R,S01AG,S01CB,S01DF,S01GN,S0230,S0248,S02PA,S02TE,S02VB,S02VC,S02VF,S0302,S0313,S0322,S033B,S03DN,S03KA,S03M8,S03MF,S0402,S0420,S0428,S0430,S0431,S0459,S0478,S0494,S04GQ,S04H2,S04NW,S0548,S0552,S05AC,S05AU,S05AV,S05DN,S0610,S0654,S0674,S06AE,S06AF,S06NX,S06PA,S06U3,S0711,S0754,S0760,S0775,S07EW,S07M9,S0851,S0879,S08KA,S08R3,S08R9,S08TF,S09T1,S09T2,S09TA,S09TB?_gl=1*10nf2nw*_gcl_au*NzYzNjkwMjQ4LjE3Mjk2MDczODI." target="_blank">
                     <img src="../photos/x2-bmw.jpg" alt="BMW X2">
                     <h2>BMW X2</h2>
                 </a>
                 <p>Der BMW X2 vereint ein dynamisches Design mit der Robustheit eines SUVs. Ein echter Blickfang auf der Straße.</p>
             </div>
             <div class="grid-item">
-                <a href="https://configure.bmw.at/de_AT/configure/F98/21EC/FLKSW,P0C4H,S01DF,S01MA,S01MP,S01RQ,S0230,S02PA,S02VB,S02VC,S0302,S0322,S03M6,S03MF,S0402,S0420,S0423,S0428,S0488,S0493,S04GQ,S04HA,S04MC,S04NE,S04NM,S0548,S0552,S05AL,S05AU,S05AV,S05DA,S05DM,S0610,S0654,S0688,S06AE,S06AF,S06AK,S06C4,S06NW,S06U3,S06U8,S06WD,S0712,S07M9,S07MA,S07MN,S0851,S0879,S08KA,S08R3,S08R9,S08TF,S08TR,S08WD,S08WL,S0925?_gl=1*10nf2nw*_gcl_au*NzYzNjkwMjQ4LjE3Mjk2MDczODI.">
+                <a href="https://configure.bmw.at/de_AT/configure/F98/21EC/FLKSW,P0C4H,S01DF,S01MA,S01MP,S01RQ,S0230,S02PA,S02VB,S02VC,S0302,S0322,S03M6,S03MF,S0402,S0420,S0423,S0428,S0488,S0493,S04GQ,S04HA,S04MC,S04NE,S04NM,S0548,S0552,S05AL,S05AU,S05AV,S05DA,S05DM,S0610,S0654,S0688,S06AE,S06AF,S06AK,S06C4,S06NW,S06U3,S06U8,S06WD,S0712,S07M9,S07MA,S07MN,S0851,S0879,S08KA,S08R3,S08R9,S08TF,S08TR,S08WD,S08WL,S0925?_gl=1*10nf2nw*_gcl_au*NzYzNjkwMjQ4LjE3Mjk2MDczODI." target="_blank">
                     <img src="../photos/x3-bmw.jpg" alt="BMW X3">
                     <h2>BMW X3</h2>
                 </a>
                 <p>Der BMW X3 bietet Komfort, Leistung und moderne Technologie. Ein vielseitiger SUV für jede Lebenslage.</p>
             </div>
             <div class="grid-item">
-                <a href="https://configure.bmw.at/de_AT/configure/F98/21EC/FLKSW,P0C4H,S01DF,S01MA,S01MP,S01RQ,S0230,S02PA,S02VB,S02VC,S0302,S0322,S03M6,S03MF,S0402,S0420,S0423,S0428,S0488,S0493,S04GQ,S04HA,S04MC,S04NE,S04NM,S0548,S0552,S05AL,S05AU,S05AV,S05DA,S05DM,S0610,S0654,S0688,S06AE,S06AF,S06AK,S06C4,S06NW,S06U3,S06U8,S06WD,S0712,S07M9,S07MA,S07MN,S0851,S0879,S08KA,S08R3,S08R9,S08TF,S08TR,S08WD,S08WL,S0925?_gl=1*10nf2nw*_gcl_au*NzYzNjkwMjQ4LjE3Mjk2MDczODI.">
+                <a href="https://configure.bmw.at/de_AT/configure/F98/21EC/FLKSW,P0C4H,S01DF,S01MA,S01MP,S01RQ,S0230,S02PA,S02VB,S02VC,S0302,S0322,S03M6,S03MF,S0402,S0420,S0423,S0428,S0488,S0493,S04GQ,S04HA,S04MC,S04NE,S04NM,S0548,S0552,S05AL,S05AU,S05AV,S05DA,S05DM,S0610,S0654,S0688,S06AE,S06AF,S06AK,S06C4,S06NW,S06U3,S06U8,S06WD,S0712,S07M9,S07MA,S07MN,S0851,S0879,S08KA,S08R3,S08R9,S08TF,S08TR,S08WD,S08WL,S0925?_gl=1*10nf2nw*_gcl_au*NzYzNjkwMjQ4LjE3Mjk2MDczODI." target="_blank">
                     <img src="../photos/x4-bmw.jpg" alt="BMW X4">
                     <h2>BMW X4</h2>
                 </a>
                 <p>Mit seinem coupéartigen Design und kraftvollen Motoren ist der BMW X4 sportlich und luxuriös zugleich.</p>
             </div>
             <div class="grid-item">
-                <a href="https://configure.bmw.at/de_AT/configure/F95/11ET/FX3SW,P0C4G,S01CE,S01DF,S01EZ,S01MA,S01MD,S0230,S02PA,S02VB,S02VC,S0302,S0322,S0323,S03KA,S03M6,S03MC,S03MF,S0407,S0413,S0417,S0418,S0420,S0423,S0428,S044A,S0453,S0459,S04FL,S04GQ,S04HA,S04HB,S04MA,S04MC,S04NB,S04NM,S04T7,S0548,S0552,S05AC,S05AL,S05AU,S05AV,S05DW,S0654,S06AE,S06AF,S06AK,S06C4,S06F1,S06NX,S06PA,S06U3,S06U8,S0776,S07LK,S07M9,S07ME,S07R7,S07RS,S0801,S0851,S0879,S08KA,S08R3,S08R9,S08TF,S08WM,S0925?_gl=1*10nf2nw*_gcl_au*NzYzNjkwMjQ4LjE3Mjk2MDczODI.">
+                <a href="https://configure.bmw.at/de_AT/configure/F95/11ET/FX3SW,P0C4G,S01CE,S01DF,S01EZ,S01MA,S01MD,S0230,S02PA,S02VB,S02VC,S0302,S0322,S0323,S03KA,S03M6,S03MC,S03MF,S0407,S0413,S0417,S0418,S0420,S0423,S0428,S044A,S0453,S0459,S04FL,S04GQ,S04HA,S04HB,S04MA,S04MC,S04NB,S04NM,S04T7,S0548,S0552,S05AC,S05AL,S05AU,S05AV,S05DW,S0654,S06AE,S06AF,S06AK,S06C4,S06F1,S06NX,S06PA,S06U3,S06U8,S0776,S07LK,S07M9,S07ME,S07R7,S07RS,S0801,S0851,S0879,S08KA,S08R3,S08R9,S08TF,S08WM,S0925?_gl=1*10nf2nw*_gcl_au*NzYzNjkwMjQ4LjE3Mjk2MDczODI." target="_blank">
                     <img src="../photos/x5-bmw.jpg" alt="BMW X5">
                     <h2>BMW X5</h2>
                 </a>
                 <p>Der BMW X5 verbindet Luxus und Kraft. Ein SUV, der sowohl auf der Straße als auch im Gelände glänzt.</p>
             </div>
             <div class="grid-item">
-                <a href="https://configure.bmw.at/de_AT/configure/F96/21ET/FX3DA,P0C5A,S01CE,S01DF,S01EZ,S01MA,S01MD,S0230,S02PA,S02VB,S02VC,S0302,S0322,S03KA,S03M5,S03ME,S03MF,S03MG,S0407,S0417,S0418,S0420,S0423,S0428,S044A,S0453,S0459,S04FL,S04GQ,S04HA,S04HB,S04MA,S04MC,S04NB,S04NM,S04T7,S0548,S0552,S05AC,S05AL,S05AU,S05AV,S05DW,S0654,S06AE,S06AF,S06AK,S06C4,S06F1,S06NX,S06PA,S06U3,S06U8,S0776,S07LK,S07M9,S07ME,S07R7,S07RS,S0851,S0879,S08KA,S08R3,S08R9,S08TF,S08WM,S0925?_gl=1*10nf2nw*_gcl_au*NzYzNjkwMjQ4LjE3Mjk2MDczODI.">
+                <a href="https://configure.bmw.at/de_AT/configure/F96/21ET/FX3DA,P0C5A,S01CE,S01DF,S01EZ,S01MA,S01MD,S0230,S02PA,S02VB,S02VC,S0302,S0322,S03KA,S03M5,S03ME,S03MF,S03MG,S0407,S0417,S0418,S0420,S0423,S0428,S044A,S0453,S0459,S04FL,S04GQ,S04HA,S04HB,S04MA,S04MC,S04NB,S04NM,S04T7,S0548,S0552,S05AC,S05AL,S05AU,S05AV,S05DW,S0654,S06AE,S06AF,S06AK,S06C4,S06F1,S06NX,S06PA,S06U3,S06U8,S0776,S07LK,S07M9,S07ME,S07R7,S07RS,S0851,S0879,S08KA,S08R3,S08R9,S08TF,S08WM,S0925?_gl=1*10nf2nw*_gcl_au*NzYzNjkwMjQ4LjE3Mjk2MDczODI." target="_blank">
                     <img src="../photos/x6-bmw.jpg" alt="BMW X6">
                     <h2>BMW X6</h2>
                 </a>
                 <p>Mit seinem muskulösen Design und überragender Leistung bietet der BMW X6 ein unvergleichliches Fahrerlebnis.</p>
             </div>
             <div class="grid-item">
-                <a href="https://configure.bmw.at/de_AT/configure/G07/31EM/FVAHF,P0C1K,S01CB,S01CE,S01DF,S01FK,S01MA,S0230,S0258,S02PA,S02T4,S02TB,S02VB,S02VH,S02VS,S0302,S0322,S0323,S033B,S03DN,S03M3,S03MC,S0418,S0420,S0423,S0428,S0456,S0494,S04GQ,S04LM,S04UR,S0548,S05AC,S05AL,S05AS,S05AV,S05DM,S0654,S0688,S06AE,S06AF,S06AK,S06C4,S06NX,S06PA,S06U3,S06U8,S0710,S0715,S0760,S0776,S07M9,S07NH,S0801,S0851,S0879,S08KA,S08R3,S08R9,S08WM,S0925?_gl=1*2o4qn2*_gcl_au*NzYzNjkwMjQ4LjE3Mjk2MDczODI.">
+                <a href="https://configure.bmw.at/de_AT/configure/G07/31EM/FVAHF,P0C1K,S01CB,S01CE,S01DF,S01FK,S01MA,S0230,S0258,S02PA,S02T4,S02TB,S02VB,S02VH,S02VS,S0302,S0322,S0323,S033B,S03DN,S03M3,S03MC,S0418,S0420,S0423,S0428,S0456,S0494,S04GQ,S04LM,S04UR,S0548,S05AC,S05AL,S05AS,S05AV,S05DM,S0654,S0688,S06AE,S06AF,S06AK,S06C4,S06NX,S06PA,S06U3,S06U8,S0710,S0715,S0760,S0776,S07M9,S07NH,S0801,S0851,S0879,S08KA,S08R3,S08R9,S08WM,S0925?_gl=1*2o4qn2*_gcl_au*NzYzNjkwMjQ4LjE3Mjk2MDczODI." target="_blank">
                     <img src="../photos/x7-bmw.jpg" alt="BMW X7">
                     <h2>BMW X7</h2>
                 </a>
                 <p>Der BMW X7 ist das luxuriöseste Modell der X-Reihe. Maximale Eleganz, Platz und fortschrittlichste Technologie.</p>
             </div>
             <div class="grid-item">
-                <a href="https://configure.bmw.at/de_AT/configure/I20/31CF/FSCHA,P0C3N,S01EV,S0230,S02PA,S02VB,S02VC,S02VH,S02VR,S0319,S0322,S0323,S03L7,S03M1,S0407,S0413,S0428,S042A,S043M,S0453,S04AA,S04FM,S04HC,S04NB,S04NR,S04T2,S04U6,S04U9,S04V1,S0548,S05AC,S05AQ,S05AU,S05AV,S05AZ,S05DW,S0654,S06AE,S06AF,S06AK,S06C4,S06F1,S06NX,S06U3,S06U7,S0710,S0851,S0879,S08R3,S08R9,S08TF,S08WN,S09T8/SE000001?_gl=1*8tfb3m*_gcl_au*NzYzNjkwMjQ4LjE3Mjk2MDczODI.">
+                <a href="https://configure.bmw.at/de_AT/configure/I20/31CF/FSCHA,P0C3N,S01EV,S0230,S02PA,S02VB,S02VC,S02VH,S02VR,S0319,S0322,S0323,S03L7,S03M1,S0407,S0413,S0428,S042A,S043M,S0453,S04AA,S04FM,S04HC,S04NB,S04NR,S04T2,S04U6,S04U9,S04V1,S0548,S05AC,S05AQ,S05AU,S05AV,S05AZ,S05DW,S0654,S06AE,S06AF,S06AK,S06C4,S06F1,S06NX,S06U3,S06U7,S0710,S0851,S0879,S08R3,S08R9,S08TF,S08WN,S09T8/SE000001?_gl=1*8tfb3m*_gcl_au*NzYzNjkwMjQ4LjE3Mjk2MDczODI." target="_blank">
                     <img src="../photos/iM-bmw.jpg" alt="BMW X8">
                     <h2>BMW iM</h2>
                 </a>
@@ -85,7 +85,7 @@
         <section class="special-xm">
             <h2>BMW XM - Das ultimative SUV</h2>
             <div class="xm-container">
-                <a href="https://configure.bmw.at/de_AT/configure/G09/21CS/FVDIP,P0C5Y,S01CB,S01DF,S01FZ,S0230,S02PA,S02T4,S02TB,S02VB,S02VC,S02VW,S0302,S0322,S0323,S03DN,S03M3,S0420,S0423,S0428,S044A,S0453,S04FL,S04HA,S04HB,S04MA,S04MC,S04T2,S04T3,S04T7,S04U9,S04UR,S04V1,S0548,S05AC,S05AL,S05AU,S05AV,S05DN,S05YA,S0654,S06AE,S06AF,S06AK,S06C4,S06F1,S06NX,S06PA,S06U3,S06U8,S07NH,S0801,S0851,S0879,S08KA,S08R3,S08R9,S08WN,S0925/SE000034?_gl=1*11bt9yg*_gcl_au*NzYzNjkwMjQ4LjE3Mjk2MDczODI.">
+                <a href="https://configure.bmw.at/de_AT/configure/G09/21CS/FVDIP,P0C5Y,S01CB,S01DF,S01FZ,S0230,S02PA,S02T4,S02TB,S02VB,S02VC,S02VW,S0302,S0322,S0323,S03DN,S03M3,S0420,S0423,S0428,S044A,S0453,S04FL,S04HA,S04HB,S04MA,S04MC,S04T2,S04T3,S04T7,S04U9,S04UR,S04V1,S0548,S05AC,S05AL,S05AU,S05AV,S05DN,S05YA,S0654,S06AE,S06AF,S06AK,S06C4,S06F1,S06NX,S06PA,S06U3,S06U8,S07NH,S0801,S0851,S0879,S08KA,S08R3,S08R9,S08WN,S0925/SE000034?_gl=1*11bt9yg*_gcl_au*NzYzNjkwMjQ4LjE3Mjk2MDczODI." target="_blank">
                     <img src="../photos/XM-bmw.jpg" alt="BMW XM" class="xm-image">
                 </a>
                 <div class="xm-text">
