added Karl Rapp

--- a/infos-bmw/index.html
+++ b/infos-bmw/index.html
@@ -15,9 +15,9 @@
         <div class="header-content">
             <h1>BMW Group</h1>
             <nav class="nav-links">
-                <a href="../index.html">Main</a>
-                <a href="BMWHistory.html">Geschichte</a>
                 <a href="../bmw-car/index.html">Autos</a>
+                <a href="../about-us/index.html">Über uns</a>
+                <a href="../index.html"><img class="logo" src="../photos/bmw_logo2.png" alt="BMW Logo"></a>
             </nav>
         </div>
     </header>
@@ -44,7 +44,7 @@
                             <span>München</span>
                         </div>
                     </div>
-                    <a href="https://www.bmw.at/de/index.html" class="brand-link">Mehr erfahren</a>
+                    <a href="https://www.bmw.at/de/index.html" target="_blank" class="brand-link">Mehr erfahren</a>
                 </div>
             </article>
 
@@ -67,7 +67,7 @@
                             <span>Oxford</span>
                         </div>
                     </div>
-                    <a href="https://www.mini.at/de_AT/home.html" class="brand-link">Mehr erfahren</a>
+                    <a href="https://www.mini.at/de_AT/home.html" target="_blank" class="brand-link">Mehr erfahren</a>
                 </div>
             </article>
 
@@ -90,7 +90,7 @@
                             <span>Goodwood</span>
                         </div>
                     </div>
-                    <a href="https://www.rolls-roycemotorcars.com/en_US/home.html" class="brand-link">Mehr erfahren</a>
+                    <a href="https://www.rolls-roycemotorcars.com/en_US/home.html" target="_blank" class="brand-link">Mehr erfahren</a>
                 </div>
             </article>
 
@@ -113,23 +113,40 @@
                             <span>Berlin</span>
                         </div>
                     </div>
-                    <a href="https://www.bmw-motorrad.at/de/home.html#/filter-alle" class="brand-link">Mehr erfahren</a>
+                    <a href="https://www.bmw-motorrad.at/de/home.html#/filter-alle" target="_blank" class="brand-link">Mehr erfahren</a>
                 </div>
             </article>
         </div>
 
         <br>
 
+        <h2 class="section-title">History</h2>
         <div class="history-container">
              <article class="brand-card">
                 <img src="../photos/bmw-history-pic.jpg" class="brand-image">
                 <div class="brand-content">
-                    <h3 class="brand-name">History</h3>
                     <p class="brand-description">Die Geschichte von BMW (Bayerische Motoren Werke) begann 1916, als das Unternehmen zunächst Flugzeugmotoren herstellte, insbesondere für den Ersten Weltkrieg. Nach dem Krieg wechselte BMW aufgrund von Einschränkungen der Flugzeugproduktion zu Motorrädern (1923) und später zu Automobilen (1928), mit dem BMW 3/15 als erstem Pkw. In den 1930er-Jahren machte sich BMW mit leistungsstarken Sportwagen und Luxusfahrzeugen einen Namen, bevor der Zweite Weltkrieg die Produktion wieder auf Flugzeugmotoren konzentrierte. Nach Kriegsende stand BMW kurz vor dem Bankrott, schaffte aber in den 1950er-Jahren mit der Isetta und später dem Ausbau der Mittelklasse- und Sportwagenserien den Durchbruch. Heute ist BMW ein weltweit führender Premiumhersteller, bekannt für Innovationen, Design und Leistung.</p>
-                    <a href="https://www.bmwgroup.com/en/company/history.html" class="brand-link">Mehr erfahren</a>
+                    <a href="https://www.bmwgroup.com/en/company/history.html" target="_blank" class="brand-link">Mehr erfahren</a>
                     </div>
                 </div>
              </article>
+        </div>
+
+        <div class="brands-container">
+            <article class="brand-card">
+                <img src="../photos/Karl Rapp.png" height="400">
+                <h3 class="brand-name">Karl Rapp</h3>
+                <div class="brand-content">
+                 <ul>
+                    <li>Ingenieur und Unternehmer: Karl Rapp war ein deutscher Ingenieur und Unternehmer.</li>
+                    <li>Gründer von Rapp Motorenwerke: 1913 gründete er in München die Rapp Motorenwerke, einen Vorläufer von BMW.</li>
+                    <li>Flugzeugmotoren: Spezialisiert auf die Entwicklung und Produktion von Flugzeugmotoren während des Ersten Weltkriegs.</li>
+                    <li>Probleme mit Motoren: Seine Konstruktionen hatten technische Probleme, was zum schrittweisen Verlust seiner Führungsrolle führte.</li>   
+                    <li>Übernahme durch BMW: 1917 wurden die Rapp Motorenwerke in Bayerische Motoren Werke (BMW) umbenannt, unter der Leitung von Franz Josef Popp.</li>
+                    <li>Rückzug: Karl Rapp zog sich nach der Umstrukturierung aus dem Unternehmen zurück.</li>
+                 </ul>   
+                </div>
+            </article>
         </div>
 
 
