--- a/infos-bmw/index.html
+++ b/infos-bmw/index.html
@@ -132,7 +132,7 @@
              </article>
         </div>
 
-        <div class="brands-container">
+        <div class="founder-container">
             <article class="brand-card">
                 <img src="../photos/Karl Rapp.png" height="400">
                 <h3 class="brand-name">Karl Rapp</h3>
@@ -148,7 +148,6 @@
                 </div>
             </article>
         </div>
-
 
     </main>
 </body>
