--- a/infos-bmw/index.html
+++ b/infos-bmw/index.html
@@ -133,22 +133,21 @@
         </div>
 
         <div class="founder-container">
-            <article class="brand-card">
                 <img src="../photos/Karl Rapp.png" height="400">
                 <h3 class="brand-name">Karl Rapp</h3>
                 <div class="brand-content">
                  <ul>
-                    <li>Ingenieur und Unternehmer: Karl Rapp war ein deutscher Ingenieur und Unternehmer.</li>
-                    <li>Gründer von Rapp Motorenwerke: 1913 gründete er in München die Rapp Motorenwerke, einen Vorläufer von BMW.</li>
-                    <li>Flugzeugmotoren: Spezialisiert auf die Entwicklung und Produktion von Flugzeugmotoren während des Ersten Weltkriegs.</li>
-                    <li>Probleme mit Motoren: Seine Konstruktionen hatten technische Probleme, was zum schrittweisen Verlust seiner Führungsrolle führte.</li>   
-                    <li>Übernahme durch BMW: 1917 wurden die Rapp Motorenwerke in Bayerische Motoren Werke (BMW) umbenannt, unter der Leitung von Franz Josef Popp.</li>
-                    <li>Rückzug: Karl Rapp zog sich nach der Umstrukturierung aus dem Unternehmen zurück.</li>
-                 </ul>   
+                    <li><strong>Ingenieur und Unternehmer:</strong> Karl Rapp war ein deutscher Ingenieur und Unternehmer.</li>
+                    <li><strong>Gründer von Rapp Motorenwerke:</strong> 1913 gründete er in München die Rapp Motorenwerke, einen Vorläufer von BMW.</li>
+                    <li><strong>Flugzeugmotoren:</strong> Spezialisiert auf die Entwicklung und Produktion von Flugzeugmotoren während des Ersten Weltkriegs.</li>
+                    <li><strong>Probleme mit Motoren:</strong> Seine Konstruktionen hatten technische Probleme, was zum schrittweisen Verlust seiner Führungsrolle führte.</li>   
+                    <li><strong>Übernahme durch BMW:</strong> 1917 wurden die Rapp Motorenwerke in Bayerische Motoren Werke (BMW) umbenannt, unter der Leitung von Franz Josef Popp.</li>
+                    <li><strong>Rückzug:</strong> Karl Rapp zog sich nach der Umstrukturierung aus dem Unternehmen zurück.</li>
+                 </ul>
                 </div>
-            </article>
         </div>
 
+        
     </main>
 </body>
 </html>
