Added Gustav Otto

--- a/infos-bmw/index.html
+++ b/infos-bmw/index.html
@@ -147,7 +147,20 @@
                 </div>
         </div>
 
-        
+        <div class="founder-container">
+            <img src="../photos/Gustaf Otto.jpg" height="400">
+            <h3 class="brand-name">Gustav Otto</h3>
+            <div class="brand-content">
+                <ul>
+                    <li><strong>Ingenieur und Flugzeugbauer:</strong> Gustav Otto war ein deutscher Ingenieur und Flugzeugpionier.</li>
+                    <li><strong>Gründer von Gustav Otto Flugmaschinenfabrik:</strong> 1910 gründete er in München die Gustav Otto Flugmaschinenfabrik.</li>
+                    <li><strong>Innovative Flugzeuge:</strong> Entwickelte leichte Flugzeuge und setzte Maßstäbe in der Luftfahrttechnik.</li>
+                    <li><strong>Probleme mit Wirtschaftlichkeit:</strong> Die Flugmaschinenfabrik geriet während des Ersten Weltkriegs in wirtschaftliche Schwierigkeiten.</li>
+                    <li><strong>Übernahme durch BMW-Vorläufer: </strong>1916 fusionierte sein Unternehmen mit der Rapp Motorenwerke, woraus später BMW entstand.</li>
+                    <li><strong>Späteres Wirken: </strong>Nach dem Ausscheiden aus der Luftfahrtindustrie engagierte er sich in anderen technischen Projekten.</li>
+                </ul>
+            </div>
+        </div>
     </main>
 </body>
 </html>
