--- a/infos-bmw/index.html
+++ b/infos-bmw/index.html
@@ -17,6 +17,7 @@
             <nav class="nav-links">
                 <a href="../bmw-car/index.html">Autos</a>
                 <a href="../about-us/index.html">Über uns</a>
+                <a href="../infos-bmw/history.html">Geschichte</a>
                 <a href="../index.html"><img class="logo" src="../photos/bmw_logo2.png" alt="BMW Logo"></a>
             </nav>
         </div>
@@ -116,50 +117,6 @@
                     <a href="https://www.bmw-motorrad.at/de/home.html#/filter-alle" target="_blank" class="brand-link">Mehr erfahren</a>
                 </div>
             </article>
-        </div>
-
-        <br>
-
-        <h2 class="section-title">History</h2>
-        <div class="history-container">
-             <article class="brand-card">
-                <img src="../photos/bmw-history-pic.jpg" class="brand-image">
-                <div class="brand-content">
-                    <p class="brand-description">Die Geschichte von BMW (Bayerische Motoren Werke) begann 1916, als das Unternehmen zunächst Flugzeugmotoren herstellte, insbesondere für den Ersten Weltkrieg. Nach dem Krieg wechselte BMW aufgrund von Einschränkungen der Flugzeugproduktion zu Motorrädern (1923) und später zu Automobilen (1928), mit dem BMW 3/15 als erstem Pkw. In den 1930er-Jahren machte sich BMW mit leistungsstarken Sportwagen und Luxusfahrzeugen einen Namen, bevor der Zweite Weltkrieg die Produktion wieder auf Flugzeugmotoren konzentrierte. Nach Kriegsende stand BMW kurz vor dem Bankrott, schaffte aber in den 1950er-Jahren mit der Isetta und später dem Ausbau der Mittelklasse- und Sportwagenserien den Durchbruch. Heute ist BMW ein weltweit führender Premiumhersteller, bekannt für Innovationen, Design und Leistung.</p>
-                    <a href="https://www.bmwgroup.com/en/company/history.html" target="_blank" class="brand-link">Mehr erfahren</a>
-                    </div>
-                </div>
-             </article>
-        </div>
-
-        <div class="founder-container">
-                <img src="../photos/Karl Rapp.png" height="400">
-                <h3 class="brand-name">Karl Rapp</h3>
-                <div class="brand-content">
-                 <ul>
-                    <li><strong>Ingenieur und Unternehmer:</strong> Karl Rapp war ein deutscher Ingenieur und Unternehmer.</li>
-                    <li><strong>Gründer von Rapp Motorenwerke:</strong> 1913 gründete er in München die Rapp Motorenwerke, einen Vorläufer von BMW.</li>
-                    <li><strong>Flugzeugmotoren:</strong> Spezialisiert auf die Entwicklung und Produktion von Flugzeugmotoren während des Ersten Weltkriegs.</li>
-                    <li><strong>Probleme mit Motoren:</strong> Seine Konstruktionen hatten technische Probleme, was zum schrittweisen Verlust seiner Führungsrolle führte.</li>   
-                    <li><strong>Übernahme durch BMW:</strong> 1917 wurden die Rapp Motorenwerke in Bayerische Motoren Werke (BMW) umbenannt, unter der Leitung von Franz Josef Popp.</li>
-                    <li><strong>Rückzug:</strong> Karl Rapp zog sich nach der Umstrukturierung aus dem Unternehmen zurück.</li>
-                 </ul>
-                </div>
-        </div>
-
-        <div class="founder-container">
-            <img src="../photos/Gustaf Otto.jpg" height="400">
-            <h3 class="brand-name">Gustav Otto</h3>
-            <div class="brand-content">
-                <ul>
-                    <li><strong>Ingenieur und Flugzeugbauer:</strong> Gustav Otto war ein deutscher Ingenieur und Flugzeugpionier.</li>
-                    <li><strong>Gründer von Gustav Otto Flugmaschinenfabrik:</strong> 1910 gründete er in München die Gustav Otto Flugmaschinenfabrik.</li>
-                    <li><strong>Innovative Flugzeuge:</strong> Entwickelte leichte Flugzeuge und setzte Maßstäbe in der Luftfahrttechnik.</li>
-                    <li><strong>Probleme mit Wirtschaftlichkeit:</strong> Die Flugmaschinenfabrik geriet während des Ersten Weltkriegs in wirtschaftliche Schwierigkeiten.</li>
-                    <li><strong>Übernahme durch BMW-Vorläufer: </strong>1916 fusionierte sein Unternehmen mit der Rapp Motorenwerke, woraus später BMW entstand.</li>
-                    <li><strong>Späteres Wirken: </strong>Nach dem Ausscheiden aus der Luftfahrtindustrie engagierte er sich in anderen technischen Projekten.</li>
-                </ul>
-            </div>
         </div>
     </main>
 </body>
