Changed colour of containers to grey and added 'Mehr erfahren' button to founders

--- a/infos-bmw/history.html
+++ b/infos-bmw/history.html
@@ -17,13 +17,14 @@
             <nav class="nav-links">
                 <a href="../bmw-car/index.html">Autos</a>
                 <a href="../about-us/index.html">Über uns</a>
+                <a href="../infos-bmw/index.html">Marken</a>
                 <a href="../index.html"><img class="logo" src="../photos/bmw_logo2.png" alt="BMW Logo"></a>
             </nav>
         </div>
     </header>
 
     <main class="brands-container">
-        <h2 class="section-title">History</h2>
+        <h2 class="section-title"><strong>History</strong></h2>
         <div class="history-container">
              <article class="brand-card">
                 <img src="../photos/bmw-history-pic.jpg" class="brand-image">
@@ -37,7 +38,7 @@
 
         <div class="founder-container">
                 <img src="../photos/Karl Rapp.png" height="400">
-                <h3 class="brand-name">Karl Rapp</h3>
+                <h3 class="brand-name"><strong>Karl Rapp</strong></h3>
                 <div class="brand-content">
                  <ul>
                     <li><strong>Ingenieur und Unternehmer:</strong> Karl Rapp war ein deutscher Ingenieur und Unternehmer.</li>
@@ -47,12 +48,16 @@
                     <li><strong>Übernahme durch BMW:</strong> 1917 wurden die Rapp Motorenwerke in Bayerische Motoren Werke (BMW) umbenannt, unter der Leitung von Franz Josef Popp.</li>
                     <li><strong>Rückzug:</strong> Karl Rapp zog sich nach der Umstrukturierung aus dem Unternehmen zurück.</li>
                  </ul>
+
+                 <br>
+                 <a href="https://de.wikipedia.org/wiki/Karl_Rapp" target="_blank" class="brand-link">Mehr erfahren</a>
+
                 </div>
         </div>
 
         <div class="founder-container">
             <img src="../photos/Gustaf Otto.jpg" height="400">
-            <h3 class="brand-name">Gustav Otto</h3>
+            <h3 class="brand-name"><strong>Gustav Otto</strong></h3>
             <div class="brand-content">
                 <ul>
                     <li><strong>Ingenieur und Flugzeugbauer:</strong> Gustav Otto war ein deutscher Ingenieur und Flugzeugpionier.</li>
@@ -62,6 +67,10 @@
                     <li><strong>Übernahme durch BMW-Vorläufer: </strong>1916 fusionierte sein Unternehmen mit der Rapp Motorenwerke, woraus später BMW entstand.</li>
                     <li><strong>Späteres Wirken: </strong>Nach dem Ausscheiden aus der Luftfahrtindustrie engagierte er sich in anderen technischen Projekten.</li>
                 </ul>
+                
+                <br>
+                <a href="https://de.wikipedia.org/wiki/Gustav_Otto" target="_blank" class="brand-link">Mehr erfahren</a>
+
             </div>
         </div>
     </main>
