--- a/infos-bmw/index.html
+++ b/infos-bmw/index.html
@@ -29,7 +29,7 @@
             <article class="brand-card">
                 <img src="../photos/1er-bmw.jpg" alt="BMW" class="brand-image">
                 <div class="brand-content">
-                    <h3 class="brand-name">BMW</h3>
+                    <h3 class="brand-name"><strong>BMW</strong></h3>
                     <p class="brand-description">
                         BMW ist die Hauptmarke der BMW Group, die hochwertige Premiumfahrzeuge
                         mit Fokus auf Fahrdynamik, innovative Technik und elegantes Design für
@@ -52,7 +52,7 @@
             <article class="brand-card">
                 <img src="../photos/MINI.jpg" alt="MINI" class="brand-image">
                 <div class="brand-content">
-                    <h3 class="brand-name">MINI</h3>
+                    <h3 class="brand-name"><strong>MINI</strong></h3>
                     <p class="brand-description">
                         MINI steht für kompakte, stilvolle Fahrzeuge, die mit ihrem
                         individuellen Design und urbanen Charme ein einzigartiges Fahrerlebnis
@@ -75,7 +75,7 @@
             <article class="brand-card">
                 <img src="../photos/RollsRoyce.jpg" alt="Rolls-Royce" class="brand-image">
                 <div class="brand-content">
-                    <h3 class="brand-name">Rolls-Royce</h3>
+                    <h3 class="brand-name"><strong>Rolls-Royce</strong></h3>
                     <p class="brand-description">
                         Rolls-Royce ist die Luxusmarke der BMW Group und produziert
                         handgefertigte, exklusive Fahrzeuge, die höchste Ansprüche an Qualität,
@@ -98,7 +98,7 @@
             <article class="brand-card">
                 <img src="../photos/BmwMotorrad.jpg" alt="BMW Motorrad" class="brand-image">
                 <div class="brand-content">
-                    <h3 class="brand-name">BMW Motorrad</h3>
+                    <h3 class="brand-name"><strong>BMW Motorrad</strong></h3>
                     <p class="brand-description">
                         BMW Motorrad ist die Motorradsparte von BMW, die hochwertige Motorräder
                         für verschiedene Einsatzbereiche wie Sport, Touring und Adventure mit
