changed to darkmode

--- a/about-us/index.html
+++ b/about-us/index.html
@@ -14,16 +14,16 @@
             <img src="../photos/MColors.png" alt = "Colors">
         </div>
         <li>
-            <a href="./index.html">Home</a>
+            <a href="../index.html">Home</a>
         </li>
         <li>
-            <a href="./bmw-car/index.html">Autos</a>
+            <a href="../bmw-car/index.html">Autos</a>
         </li>
         <li>
-            <a href="./infos-bmw/index.html">Infos</a>
+            <a href="../infos-bmw/index.html">Infos</a>
         </li>
         <li>
-            <a href="./about-us/index.html">Über uns</a>
+            <a href="../about-us/index.html">Über uns</a>
         </li>
     </nav>
     <h1>Wer sind wir?</h1>
